--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       - 3306:3306
 
   wordpress:
-    container_name: PROJECT_NAME_wp
+    container_name: PROJECT_NAME_wordpress
     depends_on:
       - db
     image: wordpress:latest
@@ -30,9 +30,9 @@ services:
     restart: always
     environment:
       # PRODUCTION DATABASE
-      # VIRTUAL_HOST: PROJECT_URL_PROD
+      # VIRTUAL_HOST: www.PROJECT_URL_PROD.com
       # DEVELOPMENT DATABASE
-      VIRTUAL_HOST: PROJECT_URL_DEV
+      VIRTUAL_HOST: www.PROJECT_URL_DEV.com
       # Prod
       # WORDPRESS_DB_HOST: AWS URL TO DB
       # Dev
